--- a/back/config/packages/security.yaml
+++ b/back/config/packages/security.yaml
@@ -14,21 +14,24 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            stateless: true
             lazy: true
             provider: app_user_provider
-            jwt: ~
+            custom_authenticator: App\Security\LoginFromAuthenticator
             logout:
                 path: app_logout
                 # where to redirect after logout
                 # target: app_any_route
-        login:
-            pattern: ^/api/login
-            stateless: true
             json_login:
-                check_path: /api/login
-                username_path: email
-                password_path: password
+                check_path: api_login
+
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800
+                path: /
+                # by default, the feature is enabled by checking a checkbox in the
+                # login form, uncomment the following line to always enable it.
+                #always_remember_me: true
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
@@ -40,7 +43,6 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/api, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
 when@test:
     security:
