--- a/back/.env
+++ b/back/.env
@@ -37,7 +37,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+#MAILER_DSN=null://null
+# Looking to send emails in production? Check out our Email API/SMTP product!
+MAILER_DSN="smtp://6e55cb708d6ac8:88f549d91efc0f@sandbox.smtp.mailtrap.io:2525"
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
