--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -29,3 +29,7 @@ EXPOSE 80
 
 # Lancer Apache
 CMD ["apache2-foreground"]
+# Si on est en production, installer sans les dépendances de développement
+RUN if [ "$APP_ENV" = "prod" ]; then composer install --no-dev --optimize-autoloader --no-interaction; else composer install --optimize-autoloader --no-interaction; fi
+# Vider le cache avant l'installation
+RUN php bin/console cache:clear --env=prod
