--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -32,6 +32,6 @@ EXPOSE 80
 
 # Lancer Apache
 CMD ["apache2-foreground"]
-RUN composer install --optimize-autoloader --no-interaction
+RUN composer install --no-dev --optimize-autoloader --no-interaction
 
 ENV APP_ENV=prod
