--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -23,10 +23,13 @@ RUN ls -l /var/www/html
 # Corriger les permissions
 RUN chown -R www-data:www-data /var/www/html
 RUN chmod -R 755 /var/www/html
-RUN chmod -R 777 /var/www/html/var/cache /var/www/html/var/log
 
 # Créer les répertoires de cache et de log et corriger les permissions
 RUN mkdir -p var/cache var/log && chown -R www-data:www-data var/cache var/log
+
+# Corriger les permissions des répertoires de cache et de log
+RUN chmod -R 777 /var/www/html/var/cache
+RUN chmod -R 777 /var/www/html/var/log
 
 # Ajouter la directive ServerName pour éviter l'avertissement Apache
 RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
