--- a/back/config/packages/nelmio_cors.yaml
+++ b/back/config/packages/nelmio_cors.yaml
@@ -1,10 +1,13 @@
 nelmio_cors:
     defaults:
-        allow_credentials: true
-        allow_origin: ['http://localhost:3000']
-        allow_headers: ['Content-Type', 'Authorization']
-        allow_methods: ['GET', 'POST', 'OPTIONS', 'PUT', 'DELETE']
-        expose_headers: ['Link']
+        allow_credentials: false
+        allow_origin: ['*']  # Autoriser toutes les origines (à adapter en production)
+        allow_headers: ['*']  # Autoriser tous les en-têtes
+        allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']  # Autoriser ces méthodes
         max_age: 3600
     paths:
-        '^/api/': ~
+        '^/api/':
+            allow_origin: ['http://127.0.0.1:3000']  # Autoriser uniquement ton frontend
+            allow_headers: ['*']
+            allow_methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE', 'OPTIONS']
+            max_age: 3600
