--- a/front/package.json
+++ b/front/package.json
@@ -54,6 +54,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.3",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
