--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,48 +1,30 @@
-# Utiliser PHP 8.2 avec Apache
 FROM php:8.2-apache
 
-# Installer les extensions PHP requises
+# Installer les dépendances
 RUN apt-get update && apt-get install -y \
-    git unzip libicu-dev libpq-dev libzip-dev \
-    && docker-php-ext-install intl pdo pdo_mysql zip
+    git unzip libicu-dev libzip-dev \
+    && docker-php-ext-install pdo pdo_mysql zip intl \
+    && a2enmod rewrite
 
-# Activer mod_rewrite pour Symfony
-RUN a2enmod rewrite
+# Configurer le répertoire de travail
+WORKDIR /var/www
 
-# Installer Composer
-RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
-    php composer-setup.php --install-dir=/usr/local/bin --filename=composer && \
-    rm composer-setup.php
+# 1. D'abord copier uniquement les fichiers composer
+COPY back/composer.* ./
 
-# Définir le répertoire de travail
-WORKDIR /var/www/html
-
-# Copier le projet Symfony
-COPY . .
-
-# Copier le fichier de configuration Apache
-COPY apache-config/000-default.conf /etc/apache2/sites-available/000-default.conf
-
-# Activer le site Apache
-RUN a2ensite 000-default
-
-# Vérifier et corriger les permissions
-RUN chown -R www-data:www-data /var/www/html \
-    && chmod -R 755 /var/www/html
-
-# Créer et corriger les permissions des répertoires var/cache et var/log
-RUN mkdir -p var/cache var/log \
-    && chown -R www-data:www-data var/cache var/log \
-    && chmod -R 777 var/cache var/log
-
-# Installer les dépendances Symfony en mode production
+# 2. Installer les dépendances
 RUN composer install --no-dev --optimize-autoloader --no-interaction
 
-# Vider le cache avant le lancement
-RUN php bin/console cache:clear --env=prod
+# 3. Copier tout le reste
+COPY back/ .
 
-# Exposer le port 80
+# Permissions
+RUN chown -R www-data:www-data /var/www \
+    && chmod -R 775 var/
+
+# Configuration Apache
+COPY back/apache-config/000-default.conf /etc/apache2/sites-available/
+RUN a2ensite 000-default
+
 EXPOSE 80
-
-# Lancer Apache en premier plan
 CMD ["apache2-foreground"]
