--- a/back/apache-config/000-default.conf
+++ b/back/apache-config/000-default.conf
@@ -4,6 +4,7 @@
         AllowOverride All
         Require all granted
         Options -Indexes +FollowSymLinks
+        FallbackResource /index.php
     </Directory>
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
