--- a/back/apache-config/000-default.conf
+++ b/back/apache-config/000-default.conf
@@ -1,11 +1,16 @@
 <VirtualHost *:80>
+    ServerAdmin webmaster@localhost
+    DocumentRoot /var/www/html/public
     ServerName localhost
-    DocumentRoot /var/www/html/public  # <-- Supprimez le doublon
-    
+
     <Directory "/var/www/html/public">
+        Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
-        Options -Indexes +FollowSymLinks
-        FallbackResource /index.php
+        Order allow,deny
+        Allow from all
     </Directory>
+
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
