--- a/back/public/.htaccess
+++ b/back/public/.htaccess
@@ -2,5 +2,6 @@
     Options -MultiViews
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ index.php [QSA,L]
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^ %{DOCUMENT_ROOT}/index.php [L]
 </IfModule>
