--- a/back/apache-config/000-default.conf
+++ b/back/apache-config/000-default.conf
@@ -8,4 +8,7 @@
         Options -Indexes +FollowSymLinks
         FallbackResource /index.php
     </Directory>
+
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
