--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -6,35 +6,37 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install pdo pdo_mysql zip intl opcache mbstring \
     && a2enmod rewrite
 
-# 2. Installer Composer (méthode plus robuste)
+# 2. Configurer le ServerName Apache
+RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
+
+# 3. Installer Composer
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
-    && php composer-setup.php --install-dir=/usr/bin --filename=composer \
-    && php -r "unlink('composer-setup.php');" \
-    && chmod +x /usr/bin/composer
+    && php composer-setup.php --install-dir=/usr/local/bin --filename=composer \
+    && rm composer-setup.php
 
-# 3. Créer la structure de dossiers nécessaire
 WORKDIR /var/www/html
-RUN mkdir -p var/cache var/log \
-    && chown -R www-data:www-data /var/www/html \
-    && chmod -R 775 var/
 
-# 4. Copier uniquement les fichiers nécessaires pour composer
+# 4. Créer la structure de dossiers avec les bonnes permissions
+RUN mkdir -p var/cache var/log \
+    && chown -R www-data:www-data /var/www \
+    && chmod -R 777 /var/www
+
+# 5. Copier les fichiers composer
 COPY composer.json composer.lock ./
 
-# 5. Installer les dépendances (avec timeout augmenté)
-RUN composer install --no-dev --optimize-autoloader --no-interaction --no-scripts \
-    || (echo "Échec de l'installation, tentative avec moins de mémoire..." && COMPOSER_MEMORY_LIMIT=-1 composer install --no-dev --optimize-autoloader --no-interaction --no-scripts)
+# 6. Installer les dépendances
+RUN composer install --no-dev --optimize-autoloader --no-interaction --no-scripts
 
-# 6. Copier le reste de l'application
+# 7. Copier l'application
 COPY . .
 
-# 7. Configurer Apache
+# 8. Configurer Apache
 COPY apache-config/000-default.conf /etc/apache2/sites-available/
 RUN a2ensite 000-default
 
-# 8. Finaliser les permissions et cache
+# 9. Ajuster les permissions finales
 RUN chown -R www-data:www-data /var/www/html \
-    && chmod -R 775 var/ vendor/ \
+    && chmod -R 777 var/cache var/log \
     && php bin/console cache:clear --env=prod --no-warmup \
     && php bin/console cache:warmup --env=prod
 
